--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Categories view</title>
+<!doctype html>
+<html lang="en" ng-app="MenuApp">
+<head>
+<meta charset="utf-8">
+<title>Categories view</title>
 
 <link rel="stylesheet" href="styles/bootstrap.min.css">
 <link rel="stylesheet" href="styles/main.css">
 
-<script src="lib/jquery-3.1.0.min.js"></script>
 <script src="lib/angular.min.js"></script>
+<script src="lib/angular-ui-router.min.js"></script>
 
 <script src="src/menuapp.module.js"></script>
-
-<!-- 'MenuApp' module artifacts -->
-<script src="src/shoppinglist.component.js"></script>
-<script src="src/shoppinglist/shoppinglist.controller.js"></script>
-<script src="src/shoppinglist/shoppinglist.factory.js"></script>
-<script src="src/shoppinglist/weightlossfilter.service.js"></script>
+<script src="src/data.module.js"></script>
 
 
-  </head>
-  <body ng-app="MenuApp">
-    <ui-view></ui-view>
-  </body>
+<script src="src/menudata.service.js"></script>
+
+<script src="src/categories.component.js"></script>
+<script src="src/categories.controller.js"></script>
+<script src="src/items.component.js"></script>
+<script src="src/items.controller.js"></script>
+
+<script src="src/routes.js"></script>
+
+</head>
+<body>
+  <div class="container">
+  <ui-view></ui-view>
+</div>
+</body>
 </html>
