--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="styles/bootstrap.min.css">
 <link rel="stylesheet" href="styles/main.css">
 
-<script src="js/angular.min.js"></script>
-<script src="js/angular-ui-router.min.js"></script>
+<script src="lib/angular.min.js"></script>
+<script src="lib/angular-ui-router.min.js"></script>
 
 <script src="src/menuapp.module.js"></script>
 <script src="src/data.module.js"></script>
